# brass-monkey

./: .mozconfig  LICENSE  README.md  aclocal.m4  client.mk  configure.in  mach
calendar/base/src/: calUtils.js
calendar/lightning/: versions.mk
calendar/timezones/: Makefile.in
config/: baseconfig.mk  rules.mk
extensions/: moz.build
extensions/inspector/: .gitattributes  Makefile.in  install.rdf  jar.mn
extensions/inspector/resources/: Makefile.in
extensions/inspector/resources/locale/: Makefile.in
extensions/irc/: jar.mn  maxversions.mk
extensions/irc/locales/: Makefile.in
extensions/irc/locales/generic/: install.rdf
extensions/irc/sm/: jar.mn
suite/: .#app.mozbuild  app.mozbuild  configure.in  confvars.sh  moz.build  moz.configure
suite/app/: Makefile.in  application.ini  blocklist.xml  moz.build  nsSuiteApp.cpp
suite/app/macbuild/Contents/: Info.plist.in  MacOS-files.in
suite/branding/unofficial/: Makefile.in  moz.build
suite/branding/unofficial/content/: aboutRights.xhtml
suite/branding/unofficial/icons/mac/: brassmonkey.icns  document.icns
suite/branding/unofficial/locales/: jar.mn
suite/branding/unofficial/locales/en-US/: aboutRights.dtd  brand.dtd  brand.properties
suite/branding/unofficial/package/mac/: disk.icns
suite/browser/: browser-prefs.js  browser.js  navigator.js  navigator.xul  navigatorOverlay.xul  nsBrowserContentHandler.js  sessionHistoryUI.js  tabbrowser.xml
suite/browser/pageinfo/: security.js
suite/common/: about.xhtml  app-license.html  communicator.css  consoleOverlay.xul  contentAreaContextOverlay.xul  jar.mn  moz.build  nsContextMenu.js  tasksOverlay.js  tasksOverlay.xul  utilityOverlay.js  utilityOverlay.xul  viewZoomOverlay.js
suite/common/bindings/: notification.xml
suite/common/history/: history.xul
suite/common/permissions/: permissionsManager.js  permissionsOverlay.js
suite/common/pref/: pref-cookies.xul  pref-http.xul  pref-images.xul  pref-offlineapps.xul  pref-popups.xul  pref-scripts.xul  pref-security.js  pref-security.xul  pref-smartupdate.xul  preferences.xul
suite/common/src/: nsAbout.js  nsSuiteGlue.js
suite/editor/ui/locales/en-US/chrome/region/: region.properties
suite/installer/: Makefile.in  allowed-dupes.mn  package-manifest.in  removed-files.in
suite/locales/: Makefile.in  filter.py  jar.mn  l10n.ini  shipped-locales
suite/locales/en-US/chrome/browser/: navigator.properties  navigatorOverlay.dtd  region.properties
suite/locales/en-US/chrome/common/: consoleOverlay.dtd  gopherAddon.dtd  region.properties  tasksOverlay.dtd  utilityOverlay.dtd
suite/locales/en-US/chrome/common/help/: cs_nav_prefs_advanced.xhtml  customize_help.xhtml  help-index1.rdf  suite-toc.rdf
suite/locales/en-US/chrome/common/permissions/: permissionsManager.properties
suite/locales/en-US/chrome/common/pref/: pref-advanced.dtd  pref-http.dtd  pref-images.dtd  pref-popups.dtd  pref-scripts.dtd  pref-security.dtd  preferences.dtd  prefutilities.properties
suite/locales/en-US/chrome/mailnews/: region.properties  start.dtd
suite/locales/en-US/chrome/mailnews/compose/: composeMsgs.properties
suite/locales/en-US/crashreporter/: crashreporter-override.ini
suite/locales/en-US/installer/windows/: custom.properties
suite/locales/en-US/profile/: bookmarks.extra  bookmarks.inc
suite/locales/en-US/searchplugins/: list.txt
suite/locales/en-US/updater/: updater.ini
suite/locales/generic/profile/: bookmarks.html.in
suite/mailnews/: mailWindowOverlay.js  mailWindowOverlay.xul  msgMail3PaneWindow.js  start.xhtml
suite/mailnews/compose/: MsgComposeCommands.js  messengercompose.xul
suite/modules/: PlacesUIUtils.jsm
suite/smile/src/: smileApplication.js
suite/themes/classic/: install.rdf  jar.mn  moz.build
suite/themes/classic/communicator/: prefpanels.css
suite/themes/classic/mac/messenger/: primaryToolbar.css
suite/themes/classic/mac/navigator/: navigator.css
suite/themes/classic/messenger/: primaryToolbar.css
suite/themes/classic/navigator/: navigator.css  tabbrowser.css
(+2 files in other folders)
